CoqOfSolidity/test/libsolidity/syntaxTests/errors/error_param_type_shadowed_by_param_name.v
(* Generated by coq-of-solidity *)
Require Import CoqOfSolidity.CoqOfSolidity.

(* Contract *)
Module C.
  (* Enum EnumType *)

  (* Struct StructType *)

  (* Error E1 *)

  (* Error E2 *)

  (* Error E3 *)
End C.
